# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  a2l-import-sample.csv  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  sample.env
.postman/: config.json
MacFAST/: asgi.py  celery.py  models.py  pagination.py  settings.py  settings_test.py  test_settings.py  urls.py  wsgi.py
analytics/: admin.py  models.py  tests.py  urls.py
analytics/migrations/: 0001_initial.py  0002_usertopicabilityscore_variance.py  0003_questionattempt_skipped_and_more.py  0003_questionreport.py  0004_coursexp.py  0004_remove_questionreport_reason_and_more.py  0005_alter_coursexp_options.py  0005_alter_coursexp_options_alter_questionreport_question.py  0005_questionreport_contact_consent_and_more.py  0006_merge_20260407_1154.py  0006_remove_questionreport_contact_consent.py  0006_repair_missing_questionreport_tables.py  0007_alter_questionattempt_user_and_more.py  0007_alter_questionreport_user.py
analytics/serializers/: __init__.py  ability_score_serializer.py  class_average_serializer.py  course_xp_serializer.py  quesiton_report_serializer.py  question_report_aggregate_serializer.py  question_report_serializer.py  time_per_question_serializer.py  unit_distribution_serializer.py
analytics/views/: __init__.py  base.py  class_average.py  course_xp_viewset.py  question_report_aggregate_viewset.py  question_report_viewset.py  time_per_question.py  unit_distribution.py
core/: admin.py  models.py  queries.py  urls.py
core/cat_methods/: adaptive_test_model.py  adaptive_test_utils.py  rasch_model.py
core/fixtures/: initial_questions.json
courses/: admin.py  models.py  urls.py
load_tests/: oidc_callback_benchmark.py  submit_answer_locustfile.py
loadtests/: submit_answer_locustfile.py
performance/: benchmark_parser.py
sso_auth/: admin.py  backends.py  models.py  urls.py
(+167 files in other folders)
